Fix cropped height bug

--- a/popup.css
+++ b/popup.css
@@ -28,6 +28,7 @@
 
 body {
 	width: 400px;
+	height: 100%;
 }
 
 #day {
